--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 MAIL_USER=partner250724@avatell.ru
-MAIL_PASSWORD='5ZES>DMuyfSZp}'
+MAIL_PASSWORD='GAVNO007'
 IMAP_HOST=imap.timeweb.ru
 SMTP_HOST=smtp.timeweb.ru
 IMAP_PORT=143
 SMTP_PORT=25
-BITRIX_HOOK='https://on-wifi.bitrix24.ru/rest/11940/5uwmb6utcx09t1a6'
+BITRIX_HOOK='https://on-wifi.bitrix24.ru/rest/11940/w25merx8gt6hzwt5'
