--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mailparser": "^3.7.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.14",
+    "winston": "^3.14.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
