--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MAIL_USER=partner250724@avatell.ru
-MAIL_PASSWORD='GAVNO007'
+MAIL_PASSWORD=GAVNO007
 IMAP_HOST=imap.timeweb.ru
 SMTP_HOST=smtp.timeweb.ru
 IMAP_PORT=993
